# AIAgentsFactory

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
ai_agents/: knowledge_base.py  rag.py
app/backend/: main.py
app/backend/api/: routes.py
app/backend/core/: config.py  logger.py  secrets.py  security.py
app/backend/models/: pydantic_models.py
app/backend/services/: agent_service.py
app/backend/services/ai_agents/: base.py  orchestrator.py
app/backend/services/ai_agents/expert_agents/: software_engineer.py
experiments/ai_agents_test/: nohup.out
experiments/ai_agents_test/ai_agents_factory/: ai_agent.py  interface.ipynb  rag.py
resources/: llinks.md
